[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/skills/SkillFrame.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/PlayerSkillSlot.gd" type="Script" id=2]
[ext_resource path="res://sprites/controls/icons8-w-key-100.png" type="Texture" id=3]
[ext_resource path="res://sprites/controls/icons8-q-key-100.png" type="Texture" id=4]
[ext_resource path="res://sprites/controls/icons8-e-key-100.png" type="Texture" id=5]
[ext_resource path="res://sprites/skills/skill_counter_remains.png" type="Texture" id=6]
[ext_resource path="res://fonts/knight-vision-font/KnightVision-p7Ezy.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 7 )

[node name="SkillSlot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="SkillSlotContainer" type="HBoxContainer" parent="."]
margin_left = 228.0
margin_top = 212.0
margin_right = 428.0
margin_bottom = 276.0
rect_scale = Vector2( 2.61029, 2.61029 )

[node name="S1" type="TextureButton" parent="SkillSlotContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="S1Texture" type="TextureRect" parent="SkillSlotContainer/S1"]
show_behind_parent = true
margin_left = 10.0
margin_top = 9.0
margin_right = 50.0
margin_bottom = 49.0
rect_scale = Vector2( 1.14223, 1.14223 )
expand = true
stretch_mode = 5

[node name="Q" type="Sprite" parent="SkillSlotContainer/S1"]
position = Vector2( 7.66199, 57.848 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="S1Indicator" type="TextureRect" parent="SkillSlotContainer/S1"]
show_behind_parent = true
margin_top = 60.9128
margin_right = 64.0
margin_bottom = 76.9128
texture = ExtResource( 6 )

[node name="S1Count" type="RichTextLabel" parent="SkillSlotContainer/S1/S1Indicator"]
margin_left = 9.57748
margin_top = 2.2986
margin_right = 49.5775
margin_bottom = 42.2986
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][b] 0"
text = " 0"

[node name="S2" type="TextureButton" parent="SkillSlotContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="S2Texture" type="TextureRect" parent="SkillSlotContainer/S2"]
show_behind_parent = true
margin_left = 10.0
margin_top = 9.0
margin_right = 50.0
margin_bottom = 49.0
rect_scale = Vector2( 1.14223, 1.14223 )
expand = true
stretch_mode = 5

[node name="W" type="Sprite" parent="SkillSlotContainer/S2"]
position = Vector2( 7.47052, 57.848 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="S2Indicator" type="TextureRect" parent="SkillSlotContainer/S2"]
show_behind_parent = true
margin_top = 60.9128
margin_right = 64.0
margin_bottom = 76.9128
texture = ExtResource( 6 )

[node name="S2Count" type="RichTextLabel" parent="SkillSlotContainer/S2/S2Indicator"]
margin_left = 9.57748
margin_top = 2.2986
margin_right = 49.5775
margin_bottom = 42.2986
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][b] 0"
text = " 0"

[node name="S3" type="TextureButton" parent="SkillSlotContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="S3Texture" type="TextureRect" parent="SkillSlotContainer/S3"]
show_behind_parent = true
margin_left = 9.7662
margin_top = 9.0
margin_right = 49.7662
margin_bottom = 49.0
rect_scale = Vector2( 1.14223, 1.14223 )
expand = true
stretch_mode = 5

[node name="E" type="Sprite" parent="SkillSlotContainer/S3"]
position = Vector2( 7.66209, 57.848 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="S3Indicator" type="TextureRect" parent="SkillSlotContainer/S3"]
show_behind_parent = true
margin_top = 60.9128
margin_right = 64.0
margin_bottom = 76.9128
texture = ExtResource( 6 )

[node name="S3Count" type="RichTextLabel" parent="SkillSlotContainer/S3/S3Indicator"]
margin_left = 9.57748
margin_top = 2.2986
margin_right = 49.5775
margin_bottom = 42.2986
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][b] 0"
text = " 0"
